fixed font contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -233,7 +233,7 @@ a:link,
 a:visited
      {
     text-decoration: none;
-	color: rgb(0, 105, 0);
+	color: rgb(0, 80, 0);
 }
 
 
